--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "article-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch src --ext ts --exec ts-node src/app.ts"
+    "start": "nodemon --watch src --ext ts --exec ts-node src/app.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
@@ -28,5 +29,11 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
+  },
+  "_moduleDirectories": [
+    "node_modules_custom"
+  ],
+  "_moduleAliases": {
+    "@src": "./dist"
   }
 }
